Remove &nbsp; & fix code highlightings

--- a/demo-5.mdx
+++ b/demo-5.mdx
@@ -140,7 +140,7 @@ const ListView = ({ onView }) => (
 
 const DetailView = ({ onBack, onEdit }) => (
   <>
-    <AntButton onClick={onBack}>Back</AntButton>&nbsp;
+    <AntButton onClick={onBack}>Back</AntButton>
     <PrimaryButton onClick={onEdit}>Edit</PrimaryButton>
   </>
 )
@@ -193,7 +193,7 @@ const ListView = ({ onView }) => (
 
 const DetailView = ({ onBack, onEdit }) => (
   <>
-    <AntButton onClick={onBack}>Back</AntButton>&nbsp;
+    <AntButton onClick={onBack}>Back</AntButton>
     <PrimaryButton onClick={onEdit}>Edit</PrimaryButton>
   </>
 )
