--- a/demo-6.mdx
+++ b/demo-6.mdx
@@ -121,9 +121,9 @@ export const App = () => {
 
   return (
     <main class="app">
-      <Button onClick={handleOpenMultiple}>Multiple Items</Button>&nbsp;
-      <Button onClick={handleOpenSingle}>Single Item</Button>&nbsp;
-      <Button onClick={handleOpenEmpty}>No Item</Button>&nbsp;
+      <Button onClick={handleOpenMultiple}>Multiple Items</Button>
+      <Button onClick={handleOpenSingle}>Single Item</Button>
+      <Button onClick={handleOpenEmpty}>No Item</Button>
       <Modal
         onCancel={handleClose}
         stateValue={current.value.visible}
