Rename State Transitions

--- a/toggle.mdx
+++ b/toggle.mdx
@@ -38,7 +38,7 @@ const toggleMachine = Machine({
 })
 ```
 
-```js 7:9,12:14 subtitle="Events"
+```js 7:9,12:14 subtitle="State Transitions"
 import { Machine } from 'xstate'
 
 const toggleMachine = Machine({
